# Vision_-education

./: README.md
HW1/: README.md  Untitled Document 1
HW1/build-ransac_test-Desktop-Debug/: CMakeCache.txt  Makefile  cmake_install.cmake  ransac_test
HW1/build-ransac_test-Desktop-Debug/.cmake/api/v1/reply/: cache-v2-a74abe7569dcd964222b.json  cmakeFiles-v1-34dfa7273d56611119af.json  codemodel-v2-4e906dd11517f87e0403.json  directory-.-Debug-e4b729e32247cd1b560e.json  index-2024-11-11T18-18-37-0081.json  target-ransac_test-Debug-db77d69addf0c155cfe1.json  target-ransac_test_autogen-Debug-18dc7d1e5cae12f30c2f.json
HW1/build-ransac_test-Desktop-Debug/ransac_test_autogen/EWIEGA46WW/: moc_mainwindow.cpp  moc_mainwindow.cpp.d  qrc_ransac_test.cpp
HW1/build-ransac_test-Desktop-Debug/ransac_test_autogen/include/: ui_mainwindow.h
HW1/ransac_test/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui  ransac_test.qrc
HW2/: README.md
HW2/build-least_squares-Desktop-Debug/: CMakeCache.txt  CMakeCache.txt.prev  Makefile  cmake_install.cmake  least_squares
HW2/build-least_squares-Desktop-Debug/.cmake/api/v1/reply/: cache-v2-95dc467035a54343c0aa.json  cmakeFiles-v1-ce3a29ef0c217c191eb0.json  codemodel-v2-788910a40932caeb20c5.json  directory-.-Debug-23a666565b926adfa509.json  index-2024-11-11T18-44-06-0298.json  target-least_squares-Debug-1838268b2968333b5b33.json
HW2/build-least_squares-Desktop-Debug/.cmake/api/v1/reply.prev/: cache-v2-69c0ad96faeb15fe0ddd.json  cmakeFiles-v1-fd9e7031c902a814e902.json  codemodel-v2-12c835f44784bce29b72.json  index-2024-11-11T18-40-49-0650.json  target-least_squares-Debug-54c18d63acfcc37caf15.json  target-least_squares_autogen-Debug-bf843c171f3557717ee0.json
HW2/build-least_squares-Desktop-Debug/least_squares_autogen/EWIEGA46WW/: moc_mainwindow.cpp  moc_mainwindow.cpp.d  qrc_least_squares.cpp
HW2/build-least_squares-Desktop-Debug/least_squares_autogen/include/: ui_mainwindow.h
HW2/least_squares/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
HW3/: README.md
HW3/build-k_means_clustering_test-Desktop-Debug/: CMakeCache.txt.prev  Makefile  cmake_install.cmake  k_means_clustering_test
HW3/build-k_means_clustering_test-Desktop-Debug/.cmake/api/v1/reply/: cmakeFiles-v1-ae29570b216701c06879.json  codemodel-v2-ad2f32cb5835dee34483.json  directory-.-Debug-40655057b15fc07b3109.json  target-k_means_clustering_test-Debug-001daf98adf00c9cf3f2.json  target-k_means_clustering_test_autogen-Debug-5dcf48e4a8b2352c8daf.json
HW3/build-k_means_clustering_test-Desktop-Debug/.cmake/api/v1/reply.prev/: cache-v2-5bf473530f54adad2979.json  index-2024-11-11T18-54-06-0166.json
HW3/build-k_means_clustering_test-Desktop-Debug/k_means_clustering_test_autogen/EWIEGA46WW/: moc_mainwindow.cpp  moc_mainwindow.cpp.d  qrc_k_means_clustering_test.cpp
HW3/build-k_means_clustering_test-Desktop-Debug/k_means_clustering_test_autogen/include/: ui_mainwindow.h
HW3/k_means_clustering_test/: CMakeLists.txt  k_means_clustering_test.qrc  mainwindow.cpp  mainwindow.h  mainwindow.ui
HW3/k_means_clustering_test/resources/data/: cluster_data_.csv
